<resources>
    <string name="app_name">ConversionApp</string>
    <string name="action_settings">Settings</string>
    <string name="convert_from_text">Convert From</string>
    <string name="default_tsp_value">1.0 teaspoon</string>
    <string name="default_cup_value">.0208 cups</string>
    <string name="default_tbs_value">.3333 tbs</string>
    <string name="default_oz_value">.16666 oz</string>
    <string name="default_kg_value">.0057 kg</string>
    <string name="default_quart_value">.0052 quart</string>
    <string name="gallon_default_value">.0013 gallon</string>
    <string name="pound_default_value">.0125 pound</string>
    <string name="ml_default_value">4.9289 ml</string>
    <string name="liter_default_value">.0049 liter</string>
</resources>
